WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
282808
WebCore::CSS::UnevaluatedCalc template class can't be compiled in non-unified source builds
https://bugs.webkit.org/show_bug.cgi?id=282808
Summary
WebCore::CSS::UnevaluatedCalc template class can't be compiled in non-unified...
Fujii Hironori
Reported
2024-11-07 20:44:30 PST
WebCore::CSS::UnevaluatedCalc template class can be compiled in non-unified source builds
Attachments
build errors
(33.97 KB, text/plain)
2024-11-07 21:14 PST
,
Fujii Hironori
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Fujii Hironori
Comment 1
2024-11-07 20:56:15 PST
Pull request:
https://github.com/WebKit/WebKit/pull/36374
Fujii Hironori
Comment 2
2024-11-07 21:14:59 PST
Created
attachment 473178
[details]
build errors
EWS
Comment 3
2024-11-09 13:15:31 PST
Committed
286386@main
(91ee8d03edf4): <
https://commits.webkit.org/286386@main
> Reviewed commits have been landed. Closing PR #36374 and removing active labels.
Radar WebKit Bug Importer
Comment 4
2024-11-09 13:16:15 PST
<
rdar://problem/139574658
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug