CSS::UnevaluatedCalc template class can't be compiled in non-unified source builds https://bugs.webkit.org/show_bug.cgi?id=282808

Reviewed by Sam Weinig.

CSS::UnevaluatedCalc template class copied and destroyed an instance
of Ref<CSSCalcValue> class. But, CSSCalcValue was incomplete.

CSSUnevaluatedCalc.h has to include CSSCalcValue.h, but it causes a
recursive inclusion. And, definitions of UnevaluatedCalc memeber
functions can't be moved to CSSUnevaluatedCalc.cpp because it is a
template class.

Extracted BaseUnevaluatedCalc non-template class from UnevaluatedCalc.

Combined changes:
* Source/WebCore/css/values/primitives/CSSUnevaluatedCalc.cpp:
(WebCore::CSS::BaseUnevaluatedCalc::BaseUnevaluatedCalc):
(WebCore::CSS::BaseUnevaluatedCalc::protectedCalc const):
* Source/WebCore/css/values/primitives/CSSUnevaluatedCalc.h:
(WebCore::CSS::BaseUnevaluatedCalc::operator== const):
(WebCore::CSS::UnevaluatedCalc::UnevaluatedCalc):
(WebCore::CSS::UnevaluatedCalc::protectedCalc const): Deleted.
(WebCore::CSS::UnevaluatedCalc::operator== const): Deleted.

Canonical link: https://commits.webkit.org/286386@main